Organized repository and added readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+.Python
+*.egg-info/
+dist/
+build/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Environments
+.env
+.venv
+env/
+venv/
+
+# macOS
+.DS_Store
+
+# Editor
+.vscode/
+.idea/
+tempCodeRunnerFile.py
+
 # Prerequisites
 *.d
 
